# argos-assistant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  WORKFLOWS.md
models/: argos-qwen3-4b.Modelfile
skills/cli-command-generation/: prompt.md  skill.yaml
skills/command-simulation/: prompt.md  skill.yaml
skills/configuration-management/: prompt.md  skill.yaml
skills/dataset-curation/: prompt.md  skill.yaml
skills/dataset-generation/: prompt.md  skill.yaml
skills/documentation-maintenance/: prompt.md  skill.yaml
skills/internal-prompt-creation/: prompt.md  skill.yaml
skills/local-setup/: prompt.md  skill.yaml
skills/long-term-memory/: prompt.md  skill.yaml
skills/mcp-server-creation/: prompt.md  skill.yaml
skills/model-benchmarking/: prompt.md  skill.yaml
skills/performance-profiling/: prompt.md  skill.yaml
skills/project-architecture/: prompt.md  skill.yaml
skills/project-security/: prompt.md  skill.yaml
skills/sample-productivity/: skill.yaml
skills/test-generation/: prompt.md  skill.yaml
tests/: test_agent.py  test_cli.py  test_cli_commands.py  test_cli_memory.py  test_cli_prompt.py  test_cli_ui.py  test_config.py  test_executor.py  test_file_resolver.py  test_long_term_memory.py  test_mcp_client.py  test_memory.py  test_modelfile.py  test_ollama_client.py  test_planner.py  test_policy.py  test_registry.py  test_session_memory.py  test_skills_loader.py  test_suggestions.py
(+178 files in other folders)
